2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * AggregatingFilter/AggregatingChunk: new class
        * AggregatingFilter/AggregatingChunkArray: move aggregator to 
          AggregatingChunk class; major refactoring, removing most subclasses
        * AggregatingFilter/AggregatingFilter.m: clear cache when
          hierarchyChanged
        * AggregatingFilter/EntityAggregator: implement OneLinkAggregator,
          auxiliary class for LinkAggregator (aggregates one src-dest pair);
          retain temporary times;
        * AggregatingFilter/GNUmakefile: compile new file

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * PajeSimulator/SimulContainer: remove missing chunk notif;
          PajeSimulator/UserLink: better comparision of matching links,
          should work when re-simulating

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * PajeSimulator/SimulChunk: cope with changes in EntityChunk;
          remove aggregation subclasses;
          test for indexOfLastObject... returning NSNotFound

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
        * General/ChunkArray: use exception instead of notif for missing chk;
          add new enumerators
        * General/EntityChunk.[hm]: use new enumerators; store entities here,
          not in subclasses.
        * General/PSortedArray: new enumerators
        * General/NSArray+Additions.m: allow range out of array

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
        * FileReader: add support for reading gzipped files
          add control of when a chunk can end
        * PajeEventDecoder: ditto
        * PajeSimulator: ditto

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* add timeLimitsChanged notification for better control of when to
	  recalculate layouts

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/PajeTraceController.m; PajeSimulator/PajeSimul.m:
	  call missingChunk directly instead of thru a notification

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>